add header html, add normalize.css

--- a/index.html
+++ b/index.html
@@ -1,39 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
 
-<body>
-
+  <body>
     <header class="header">
+      <div class="container">
+        <a href="index.html" class="logo"
+          ><img src="images/logo.svg" alt="logo." class="logo_image"
+        /></a>
+        <button class="search">
+          <span class="visually_hidden">Search</span>
+        </button>
+        <button class="hamburger">
+          <span class="visually_hidden">Open menu</span>
+        </button>
+        <a href="#" class="account_link"
+          ><span class="visually_hidden">Go to the account page</span></a
+        >
+        <button class="cart">
+          <span class="cart_number">5</span>
+          <span class="visually_hidden">Open cart</span>
+        </button>
         <nav class="navigation">
-            <ul class="main_
-            menu">
-                <li><a class="mega-link" href="index.html"> <img src="images/Group 2.svg" alt="logo"></a></li>
-                <li><a class="mega-link" href="#"> <img src="images/Forma 1.svg" alt="search"></a></li>
-                <li><a class="mega-link" href="#"> <img src="images/Forma 1 (1).svg" alt="menu"></a></li>
-                <li><a class="mega-link" href="#"> <img src="images/1.svg" alt="accaunt"></a></li>
-                <li><a class="mega-link" href="#"><img src="images/Group 35.svg" alt="bascet"></a></li>
-
-            </ul>
+          <ul class="menu">
+            <li class="menu_item">
+              <h3 class="heading_3">Man</h3>
+              <ul class="menu_links">
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Accessories</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Bags</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Denim</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">T-Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu_item">
+              <h3 class="heading_3">Woman</h3>
+              <ul class="menu_links">
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Accessories</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Jackets & Coats</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Polos</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">T-Shirts</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="menu_item">
+              <h3 class="heading_3">Kids</h3>
+              <ul class="menu_links">
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Accessories</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Jackets & Coats</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Polos</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">T-Shirts</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Shirts</a>
+                </li>
+                <li class="menu_links_item">
+                  <a href="#" class="menu_link">Bags</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button class="button_close">close navigation</button>
         </nav>
-        <div class="conteiner">
+      </div>
     </header>
-    </div>
-    <div class="content">
-        <div class="conteiner flex"></div>
-    </div>
+
+    <main>
+      <div class="container"></div>
+    </main>
     <footer class="footer">
-        <div class="conteiner"></div>
+      <div class="container"></div>
     </footer>
-
-
-</body>
-
+  </body>
 </html>
