--- a/index.html
+++ b/index.html
@@ -18,87 +18,94 @@
   <body>
     <header class="header">
       <div class="container">
-        <a href="index.html" class="logo"
-          ><img src="images/logo.svg" alt="logo." class="logo_image"
-        /></a>
-        <button class="search">
-          <span class="visually_hidden">Search</span>
-        </button>
-        <button class="hamburger">
-          <span class="visually_hidden">Open menu</span>
-        </button>
-        <a href="#" class="account_link"
-          ><span class="visually_hidden">Go to the account page</span></a
-        >
-        <button class="cart">
-          <span class="cart_number">5</span>
-          <span class="visually_hidden">Open cart</span>
-        </button>
-        <nav class="navigation">
-          <ul class="menu">
-            <li class="menu_item">
-              <h3 class="heading_3">Man</h3>
-              <ul class="menu_links">
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Accessories</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Bags</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Denim</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">T-Shirts</a>
-                </li>
-              </ul>
-            </li>
-            <li class="menu_item">
-              <h3 class="heading_3">Woman</h3>
-              <ul class="menu_links">
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Accessories</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Jackets & Coats</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Polos</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">T-Shirts</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Shirts</a>
-                </li>
-              </ul>
-            </li>
-            <li class="menu_item">
-              <h3 class="heading_3">Kids</h3>
-              <ul class="menu_links">
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Accessories</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Jackets & Coats</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Polos</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">T-Shirts</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Shirts</a>
-                </li>
-                <li class="menu_links_item">
-                  <a href="#" class="menu_link">Bags</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-          <button class="button_close">close navigation</button>
-        </nav>
+        <div class="inner">
+          <a href="index.html" class="logo">
+            <img src="images/logo.svg" alt="logo." class="logo_image"
+          /></a>
+          <button class="search">
+            <span class="visually_hidden">Search</span>
+          </button>
+        </div>
+        <div class="inner">
+          <button class="hamburger">
+            <span class="visually_hidden">Open menu</span>
+          </button>
+          <a href="#" class="account_link"
+            ><span class="visually_hidden">Go to the account page</span></a
+          >
+          <button class="cart">
+            <span class="cart_number">5</span>
+            <span class="visually_hidden">Open cart</span>
+          </button>
+        </div>
+      </div>
+      <nav class="navigation">
+        <ul class="menu">
+          <li class="menu_item">
+            <h3 class="heading_3">Man</h3>
+            <ul class="menu_links">
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Accessories</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Bags</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Denim</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">T-Shirts</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu_item">
+            <h3 class="heading_3">Woman</h3>
+            <ul class="menu_links">
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Accessories</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Jackets & Coats</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Polos</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">T-Shirts</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Shirts</a>
+              </li>
+            </ul>
+          </li>
+          <li class="menu_item">
+            <h3 class="heading_3">Kids</h3>
+            <ul class="menu_links">
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Accessories</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Jackets & Coats</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Polos</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">T-Shirts</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Shirts</a>
+              </li>
+              <li class="menu_links_item">
+                <a href="#" class="menu_link">Bags</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+        <button class="button_close"><img src="images/close.svg" alt="close navigation" /> close navigation
+          </button>
+      </nav>
+      
       </div>
     </header>
 
