add styles for the navigation

--- a/index.html
+++ b/index.html
@@ -40,73 +40,73 @@
         </div>
       </div>
       <nav class="navigation">
-        <ul class="menu">
-          <li class="menu_item">
+        <h2 class="heading_2">Menu</h2>
+        <ul class="navigation_list">
+          <li class="navigation_item">
             <h3 class="heading_3">Man</h3>
-            <ul class="menu_links">
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Accessories</a>
+            <ul class="navigation_links">
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Accessories</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Bags</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Bags</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Denim</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Denim</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">T-Shirts</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">T-Shirts</a>
               </li>
             </ul>
           </li>
-          <li class="menu_item">
+          <li class="navigation_item">
             <h3 class="heading_3">Woman</h3>
-            <ul class="menu_links">
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Accessories</a>
+            <ul class="navigation_links">
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Accessories</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Jackets & Coats</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Jackets & Coats</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Polos</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Polos</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">T-Shirts</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">T-Shirts</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Shirts</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Shirts</a>
               </li>
             </ul>
           </li>
-          <li class="menu_item">
+          <li class="navigation_item">
             <h3 class="heading_3">Kids</h3>
-            <ul class="menu_links">
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Accessories</a>
+            <ul class="navigation_links">
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Accessories</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Jackets & Coats</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Jackets & Coats</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Polos</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Polos</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">T-Shirts</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">T-Shirts</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Shirts</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Shirts</a>
               </li>
-              <li class="menu_links_item">
-                <a href="#" class="menu_link">Bags</a>
+              <li class="navigation_links_item">
+                <a href="#" class="navigation_link">Bags</a>
               </li>
             </ul>
           </li>
         </ul>
-        <button class="button_close"><img src="images/close.svg" alt="close navigation" /> close navigation
-          </button>
+        <button class="button_close">
+          <span class="visually_hidden">close navigation</span>
+        </button>
       </nav>
-      
-      </div>
     </header>
 
     <main>
