--- a/index.html
+++ b/index.html
@@ -1,119 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/style.css" />
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="container">
-        <div class="inner">
-          <a href="index.html" class="logo">
-            <img src="images/logo.svg" alt="logo." class="logo_image"
-          /></a>
-          <button class="search">
-            <span class="visually_hidden">Search</span>
-          </button>
-        </div>
-        <div class="inner">
-          <button class="hamburger">
-            <span class="visually_hidden">Open menu</span>
-          </button>
-          <a href="#" class="account_link"
-            ><span class="visually_hidden">Go to the account page</span></a
-          >
-          <button class="cart">
-            <span class="cart_number">5</span>
-            <span class="visually_hidden">Open cart</span>
-          </button>
-          <nav class="navigation">
-            <h2 class="heading_2">Menu</h2>
-            <ul class="navigation_list">
-              <li class="navigation_item">
-                <h3 class="heading_3">Man</h3>
-                <ul class="navigation_links">
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Accessories</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Bags</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Denim</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">T-Shirts</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="navigation_item">
-                <h3 class="heading_3">Woman</h3>
-                <ul class="navigation_links">
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Accessories</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Jackets & Coats</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Polos</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">T-Shirts</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Shirts</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="navigation_item">
-                <h3 class="heading_3">Kids</h3>
-                <ul class="navigation_links">
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Accessories</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Jackets & Coats</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Polos</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">T-Shirts</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Shirts</a>
-                  </li>
-                  <li class="navigation_links_item">
-                    <a href="#" class="navigation_link">Bags</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-            <button class="button_close">
-              <span class="visually_hidden">close navigation</span>
-            </button>
-          </nav>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="styles/normalize.css" />
+  <link rel="stylesheet" href="styles/style.css" />
+</head>
+
+<body>
+  <header class="header">
+    <div class="container">
+      <div class="inner">
+        <a href="index.html" class="logo">
+          <img src="images/logo.svg" alt="logo." class="logo_image" /></a>
+        <button class="search">
+          <span class="visually_hidden">Search</span>
+        </button>
       </div>
-    </header>
+      <div class="inner">
+        <button class="hamburger">
+          <span class="visually_hidden">Open menu</span>
+        </button>
+        <a href="#" class="account_link"><span class="visually_hidden">Go to the account page</span></a>
+        <button class="cart">
+          <span class="cart_number">5</span>
+          <span class="visually_hidden">Open cart</span>
+        </button>
+        <nav class="navigation">
+          <h2 class="heading_2">Menu</h2>
+          <ul class="navigation_list">
+            <li class="navigation_item">
+              <h3 class="heading_3">Man</h3>
+              <ul class="navigation_links">
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Accessories</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Bags</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Denim</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">T-Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="navigation_item">
+              <h3 class="heading_3">Woman</h3>
+              <ul class="navigation_links">
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Accessories</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Jackets & Coats</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Polos</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">T-Shirts</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Shirts</a>
+                </li>
+              </ul>
+            </li>
+            <li class="navigation_item">
+              <h3 class="heading_3">Kids</h3>
+              <ul class="navigation_links">
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Accessories</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Jackets & Coats</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Polos</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">T-Shirts</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Shirts</a>
+                </li>
+                <li class="navigation_links_item">
+                  <a href="#" class="navigation_link">Bags</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+          <button class="button_close">
+            <span class="visually_hidden">close navigation</span>
+          </button>
+        </nav>
+      </div>
+    </div>
+  </header>
 
-    <main>
-      <div class="container"></div>
-    </main>
-    <footer class="footer">
-      <div class="container"></div>
-    </footer>
-  </body>
+  <main>
+    <h1 class="visually_hidden">
+      Online Store the Brand of Luxerious Fashion for womans, mans and kids.
+    </h1>
+    <section class="intro">
+      <div class="container">
+        <img class="intro_image" src="images/intro-image.png" alt="Man in the coat." />
+        <h2 class="intro_heading">THE BRAND<br><span class="intro_heading_small">OF LUXERIOUS <span
+              class="intro_heading_color">FASHION</span></span>
+        </h2>
+      </div>
+    </section>
+    <section class="offers">
+      <ul class="offers_list">
+        <li class="offers_item">
+          <a href="#" class="offers_link">
+            <h3 class="offers_heading">30% OFF<br><span class="offers_heading_color">FOR WOMEN</span></h3>
+          </a>
+        </li>
+        <li class="offers_item">
+          <a href="#" class="offers_link">
+            <h3 class="offers_heading">HOT DEAL <br><span class="offers_heading_color">FOR MEN</span></h3>
+          </a>
+        </li>
+        <li class="offers_item">
+          <a href="#" class="offers_link">
+            <h3 class="offers_heading">NEW ARRIVALS <br><span class="offers_heading_color">FOR KIDS</span></h3>
+          </a>
+        </li>
+        <li class="offers_item">
+          <a href="#" class="offers_link">
+            <h3 class="offers_heading">LUXIROUS & TRENDY<br><span class="offers_heading_color">ACCESORIES</span></h3>
+          </a>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="container"></div>
+  </footer>
+</body>
+
 </html>
