add styles for offers

--- a/index.html
+++ b/index.html
@@ -118,28 +118,32 @@
       </div>
     </section>
     <section class="offers">
-      <ul class="offers_list">
-        <li class="offers_item">
-          <a href="#" class="offers_link">
-            <h3 class="offers_heading">30% OFF<br><span class="offers_heading_color">FOR WOMEN</span></h3>
-          </a>
-        </li>
-        <li class="offers_item">
-          <a href="#" class="offers_link">
-            <h3 class="offers_heading">HOT DEAL <br><span class="offers_heading_color">FOR MEN</span></h3>
-          </a>
-        </li>
-        <li class="offers_item">
-          <a href="#" class="offers_link">
-            <h3 class="offers_heading">NEW ARRIVALS <br><span class="offers_heading_color">FOR KIDS</span></h3>
-          </a>
-        </li>
-        <li class="offers_item">
-          <a href="#" class="offers_link">
-            <h3 class="offers_heading">LUXIROUS & TRENDY<br><span class="offers_heading_color">ACCESORIES</span></h3>
-          </a>
-        </li>
-      </ul>
+      <h2 class="visually_hidden">Our hot offers</h2>
+      <div class="container">
+        <ul class="offers_list">
+          <li class="offers_item offers_item_women">
+            <a href="#" class="offers_link">
+              <h3 class="offers_heading">30% OFF<br><span class="offers_heading_color">FOR WOMEN</span></h3>
+            </a>
+          </li>
+          <li class="offers_item offers_item_men">
+            <a href="#" class="offers_link">
+              <h3 class="offers_heading">HOT DEAL <br><span class="offers_heading_color">FOR MEN</span></h3>
+            </a>
+          </li>
+          <li class="offers_item offers_item_kids">
+            <a href="#" class="offers_link">
+              <h3 class="offers_heading">NEW ARRIVALS <br><span class="offers_heading_color">FOR KIDS</span></h3>
+            </a>
+          </li>
+          <li class="offers_item offers_item_accesories">
+            <a href="#" class="offers_link">
+              <h3 class="offers_heading">LUXIROUS & TRENDY<br><span class="offers_heading_color">ACCESORIES</span></h3>
+            </a>
+          </li>
+        </ul>
+      </div>
+
     </section>
   </main>
   <footer class="footer">
