--- a/index.html
+++ b/index.html
@@ -145,9 +145,117 @@
       </div>
 
     </section>
+    <section class="fetured">
+      <div class="container">
+        <h3 class="fetured_heading">Fetured Items</h3>
+        <p class="fetured_paragraph">Shop for items based on what we featured in this week</p>
+        <ul class="fetured_cards">
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/man_in_jacket.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/woman_in_black.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/man_in_sweater.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/man_in_T_shot.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/woman_in_blazer.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+          <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
+                src="images/woman_in_shirt.png" alt="fashion_photo">
+              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
+                cool Kym Ellery teams up with Moda Operandi.</p>
+              <p class="card_price">$52.00</p>
+            </a></li>
+        </ul>
+        <button class="fetured_button">Browse All Product</button>
+      </div>
+    </section>
+    <section class="proposal">
+      <div class="container">
+        <ul class="proposal_list">
+          <li class="proposal_item"><img src="images/delivery_icon.svg" alt="icon" class="proposal_image">
+            <h3 class="proposal_heading">Free Delivery</h3>
+            <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+              with extensive models.</p>
+          </li>
+          <li class="proposal_item"><img src="images/sale_icon.svg" alt="icon" class="proposal_image">
+            <h3 class="proposal_heading">Sales & discounts</h3>
+            <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+              with extensive models.</p>
+          </li>
+          <li class="proposal_item"><img src="images/crown_icon.svg" alt="icon" class="proposal_image">
+            <h3 class="proposal_heading">Quality assurance</h3>
+            <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
+              with extensive models.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
   </main>
   <footer class="footer">
-    <div class="container"></div>
+    <div class="container">
+      <div class="footer_inner">
+        <div class="footer_review review">
+          <img class="review_image" src="images/review_image.png" alt="foto">
+          <p class="review_feedback">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
+            condimentum“</p>
+        </div>
+        <div class="footer_subscribe subscribe">
+          <h3 class="subscribe_heading">SUBSCRIBE<br><span class="subscribe_heading_small">FOR OUR NEWLETTER AND
+              PROMOTION</span></h3>
+          <form action="" class="subscribe_form">
+            <label for="email"></label>
+            <input id="email" placeholder="Enter Your Email" type="text">
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+      <div class="footer_inner_2">
+        <div class="footer_inner_copy">
+          <p class="footer_inner_copy_text">
+            &#xa9; 2021 Brand All Rights Reserved.
+          </p>
+        </div>
+        <div class="footer_inner_links">
+          <ul class="footer_inner_links">
+            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/facebooc_icon.svg"
+                alt="image for link "></li>
+            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/insta_icon.svg"
+                alt="image for link "></li>
+            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/pinterest_icon.svg"
+                alt="image for link "></li>
+            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/twitter_icon.svg"
+                alt="image for link "></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
