styles for fetured section and proposal section

--- a/index.html
+++ b/index.html
@@ -147,50 +147,68 @@
     </section>
     <section class="fetured">
       <div class="container">
-        <h3 class="fetured_heading">Fetured Items</h3>
+        <h2 class="fetured_heading">Fetured Items</h2>
         <p class="fetured_paragraph">Shop for items based on what we featured in this week</p>
         <ul class="fetured_cards">
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/man_in_jacket.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/man_in_jacket.png" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/woman_in_black.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/woman_in_black.jpg" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/man_in_sweater.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/man_in_sweater.png" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/man_in_T_shot.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/man_in_T_shot.png" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/woman_in_blazer.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/woman_in_blazer.png" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
           <li class="fetured_card card"><a href="#" class="card_link"><img class="card_image"
-                src="images/woman_in_shirt.png" alt="fashion_photo">
-              <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
-              <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter of
-                cool Kym Ellery teams up with Moda Operandi.</p>
-              <p class="card_price">$52.00</p>
+                src="images/woman_in_shirt.png" alt="fashion photo.">
+              <div class="card_inner">
+                <h3 class="card_heading">ELLERY X M'O CAPSULE</h3>
+                <p class="card_discription">Known for her sculptural takes on traditional tailoring, Australian arbiter
+                  of
+                  cool Kym Ellery teams up with Moda Operandi.</p>
+                <p class="card_price">$52.00</p>
+              </div>
             </a></li>
         </ul>
         <button class="fetured_button">Browse All Product</button>
@@ -199,17 +217,17 @@
     <section class="proposal">
       <div class="container">
         <ul class="proposal_list">
-          <li class="proposal_item"><img src="images/delivery_icon.svg" alt="icon" class="proposal_image">
+          <li class="proposal_item proposal_item_delivery">
             <h3 class="proposal_heading">Free Delivery</h3>
             <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
               with extensive models.</p>
           </li>
-          <li class="proposal_item"><img src="images/sale_icon.svg" alt="icon" class="proposal_image">
+          <li class="proposal_item proposal_item_sales">
             <h3 class="proposal_heading">Sales & discounts</h3>
             <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
               with extensive models.</p>
           </li>
-          <li class="proposal_item"><img src="images/crown_icon.svg" alt="icon" class="proposal_image">
+          <li class="proposal_item proposal_item_quality ">
             <h3 class="proposal_heading">Quality assurance</h3>
             <p class="proposal_paragraph">Worldwide delivery on all. Authorit tively morph next-generation innov tion
               with extensive models.</p>
