styles for footer

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
           </p>
         </div>
         <div class="footer_inner_links">
-          <ul class="footer_inner_links">
+          <ul class="footer_inner_links_media">
             <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/facebooc_icon.svg"
                 alt="image for link "></li>
             <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/insta_icon.svg"
