--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container">
-      <div class="footer_inner">
+    <div class="footer_inner_top">
+      <div class="container">
         <div class="footer_review review">
           <img class="review_image" src="images/review_image.png" alt="foto">
           <p class="review_feedback">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
@@ -254,7 +254,9 @@
           </form>
         </div>
       </div>
-      <div class="footer_inner_2">
+    </div>
+    <div class="footer_inner_bottom">
+      <div class="container">
         <div class="footer_inner_copy">
           <p class="footer_inner_copy_text">
             &#xa9; 2021 Brand All Rights Reserved.
