--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="footer_inner_top">
       <div class="container">
         <div class="footer_review review">
-          <img class="review_image" src="images/review_image.png" alt="foto">
+          <img class="review_image" width="96px" height="96px" src="images/review_image.png" alt="foto">
           <p class="review_feedback">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
             condimentum“</p>
         </div>
@@ -248,32 +248,40 @@
           <h3 class="subscribe_heading">SUBSCRIBE<br><span class="subscribe_heading_small">FOR OUR NEWLETTER AND
               PROMOTION</span></h3>
           <form action="" class="subscribe_form">
-            <label for="email"></label>
-            <input id="email" placeholder="Enter Your Email" type="text">
-            <button type="submit">Subscribe</button>
+            <label for="email" class="visually_hidden">Enter Your Email</label>
+            <input class="subscribe_form_input" id="email" placeholder="Enter Your Email" type="text">
+            <button class="subscribe_form_submit" type="submit">Subscribe</button>
           </form>
         </div>
       </div>
     </div>
     <div class="footer_inner_bottom">
       <div class="container">
-        <div class="footer_inner_copy">
-          <p class="footer_inner_copy_text">
-            &#xa9; 2021 Brand All Rights Reserved.
-          </p>
-        </div>
-        <div class="footer_inner_links">
-          <ul class="footer_inner_links_media">
-            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/facebooc_icon.svg"
-                alt="image for link "></li>
-            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/insta_icon.svg"
-                alt="image for link "></li>
-            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/pinterest_icon.svg"
-                alt="image for link "></li>
-            <li class="footer_inner_link"><img class="footer_inner_link_image" src="images/twitter_icon.svg"
-                alt="image for link "></li>
-          </ul>
-        </div>
+        <p class="footer_inner_copy">
+          &#xa9; 2021 Brand All Rights Reserved.
+        </p>
+        <ul class="footer_inner_list">
+          <li class="footer_inner_item">
+            <a href="" class="footer_inner_item_link">
+              <img class="footer_inner_link_image" src="images/facebooc_icon.svg" alt="image for link ">
+            </a>
+          </li>
+          <li class="footer_inner_item">
+            <a href="" class="footer_inner_item_link">
+              <img class="footer_inner_link_image" src="images/insta_icon.svg" alt="image for link ">
+            </a>
+          </li>
+          <li class="footer_inner_item">
+            <a href="" class="footer_inner_item_link">
+              <img class="footer_inner_link_image" src="images/pinterest_icon.svg" alt="image for link ">
+            </a>
+          </li>
+          <li class="footer_inner_item">
+            <a href="" class="footer_inner_item_link">
+              <img class="footer_inner_link_image" src="images/twitter_icon.svg" alt="image for link ">
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </footer>
